--- a/frances-emart-api-gateway/src/main/resources/application-docker.yaml
+++ b/frances-emart-api-gateway/src/main/resources/application-docker.yaml
@@ -1,12 +1,17 @@
-
 spring:
   application:
-    name: emart.api.gateway
+    name: emart-api-gateway
+  cloud:
+    loadbalancer:
+      retry:
+        enabled: 
+          true
+      ribbon: 
+        enabled:
+          true
 
 server:
   port: 9010
-
-
 
 eureka:
   client:
@@ -14,3 +19,46 @@ eureka:
     fetchRegistry: true
     serviceUrl:
       defaultZone: ${EUREKA_URI:http://localhost:9999/eureka/}
+
+logback:
+  access:
+    enabled: true
+    tomcat:
+      enable-request-attributes: true
+    config: "classpath:logback-access.xml"
+
+ribbon:
+  ReadTimeout: 600000
+  ConnectTimeout: 600000
+  eureka:
+    enabled: true
+
+zuul:
+  host:
+    connect-timeout-millis: 3000000
+    socket-timeout-millis: 3000000
+    max-per-route-connections: 1000
+    max-total-connections: 300
+    time-to-live: 100
+
+  routes:
+    emart-identity-service:
+      path: /identity/**
+      sensitiveHeaders: Cookie,Set-Cookie
+      serviceId: emart-identity-service
+    emart-inventory-service:
+      path: /inventory/**
+      sensitiveHeaders: Cookie,Set-Cookie
+      serviceId: emart-inventory-service
+    eamrt-cart:
+      path: /cart/**
+      sensitiveHeaders: Cookie,Set-Cookie
+      serviceId: eamrt-cart
+    emart-order-service:
+      path: /order/**
+      sensitiveHeaders: Cookie,Set-Cookie
+      serviceId: emart-order-service
+    emart-financial-service:
+      path: /financial/**
+      sensitiveHeaders: Cookie,Set-Cookie
+      serviceId: emart-financial-service
