--- a/frances-emart-order-service/src/main/resources/application-dev.yaml
+++ b/frances-emart-order-service/src/main/resources/application-dev.yaml
@@ -15,6 +15,11 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL57InnoDBDialect
+  rabbitmq:
+    host: ${QUEUE_HOST:localhost}
+    port: ${QUEUE_PORT:5672}
+    username: ${QUEUE_USER:guest}
+    password: ${QUEUE_PASSWORD:guest}
 
 server:
   port: 9014
@@ -36,3 +41,9 @@ eureka:
     fetchRegistry: true
     serviceUrl:
       defaultZone: ${EUREKA_URI:http://localhost:9999/eureka/}
+
+emart:
+  rabbitmq:
+    queue: emart-queue
+    exchange: emart-order
+    routingkey: emart.order.#
