--- a/frances-emart-web-ui/package.json
+++ b/frances-emart-web-ui/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.0",
+    "@angular/animations": "^9.1.9",
     "@angular/common": "~9.1.0",
     "@angular/compiler": "~9.1.0",
     "@angular/core": "~9.1.0",
@@ -24,9 +24,11 @@
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
     "bootstrap": "^4.4.1",
     "jquery": "^1.9.1",
+    "ngx-toastr": "^12.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "underscore": "^1.10.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
