--- a/frances-emart-inventory-service/src/main/resources/application-dev.yaml
+++ b/frances-emart-inventory-service/src/main/resources/application-dev.yaml
@@ -43,6 +43,6 @@ eureka:
 
 emart:
   rabbitmq:
-    queue: emart-queue
+    queue: emart-queue-i
     exchange: emart-order
-    routingkey: emart.order.#
+    routingkey: emart.order
