--- a/frances-emart-order-service/src/main/resources/application-docker.yaml
+++ b/frances-emart-order-service/src/main/resources/application-docker.yaml
@@ -1,3 +1,4 @@
+
 spring:
   application:
     name: emart-order-service
@@ -14,6 +15,11 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL57InnoDBDialect
+  rabbitmq:
+    host: ${QUEUE_HOST:localhost}
+    port: ${QUEUE_PORT:5672}
+    username: ${QUEUE_USER:guest}
+    password: ${QUEUE_PASSWORD:guest}
 
 server:
   port: 9014
@@ -35,3 +41,10 @@ eureka:
     fetchRegistry: true
     serviceUrl:
       defaultZone: ${EUREKA_URI:http://localhost:9999/eureka/}
+
+emart:
+  rabbitmq:
+    queuef: emart-queue-f
+    queuei: emart-queue-i
+    exchange: emart-order
+    routingkey: emart.order
