--- a/frances-emart-inventory-service/Jenkinsfile
+++ b/frances-emart-inventory-service/Jenkinsfile
@@ -3,20 +3,20 @@ pipeline {
    stages {
       stage('Build') {
          steps {
-            git credentialsId: 'ibm-github', url: 'https://github.ibm.com/FSD-Works/frances-emart-discovery-service.git'
+            git credentialsId: 'ibm-github', url: 'https://github.ibm.com/FSD-Works/frances-emart-inventory-service'
             sh 'mvn clean package -DskipTests=true'
          }
       }
       stage('Image Build'){
         steps {
-          sh 'docker build . -t topgunbasten/emart-discovery-service'
+          sh 'docker build . -t topgunbasten/emart-inventory-service'
         }
       }
       stage('Public Image') {
          steps {
             withCredentials([usernamePassword(credentialsId: 'docker-hub', passwordVariable: 'password', usernameVariable: 'username')]) {
               sh "docker login -u ${username} -p ${password}"
-              sh "docker push topgunbasten/emart-discovery-service"
+              sh "docker push topgunbasten/emart-inventory-service"
             }
 
          }
